-- Zenchain explorer renamed to Zentrace

--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -147,7 +147,7 @@
     "Watch_list": "监控列表"
   },
   "footer": {
-    "content": "Zenchain Explorer 是一个用于检查和分析 Zenchain 区块链的工具。"
+    "content": "Zentrace 是一个用于检查和分析 Zenchain 区块链的工具。"
   },
   "block_related": {
     "Reorg": "重组",
