--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -147,7 +147,7 @@
     "Watch_list": "Watch list"
   },
   "footer": {
-    "content": "Zenchain explorer is a tool for inspecting and analyzing the Zenchain blockchain."
+    "content": "Zentrace is a tool for inspecting and analyzing the Zenchain blockchain."
   },
   "block_related": {
     "Reorg": "Reorg",
